apache jena 6.0.0
Also:
- remove deprecated calls
- remove obsolete variables
- remove obsolete imports